# teacher-automation

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  convert_to_pdf.py  environment.yml  generate_grades_summary.py  justfile  my_grades.csv  pyproject.toml  review_submissions.py  run_activity.py  run_pdf_feedback.py  tmp.txt
.claude/: research_codebase.md  settings.local.json
.claude/commands/: create_plan.md  implement_plan.md  validate_plan.md
.github/: ISSUE_TEMPLATE.md
docs/: index.md  installation.md  manual.md  usage.md
src/config/: loader.py
src/config/courses/: FI08.yml
src/grading/: __init__.py  feedback.py  generate_feedback.py  grader.py
src/manual/: __init__.py  manual_review.py
src/moodle/: __init__.py  api.py  models.py
src/output/: pdf_generator.py
src/processing/: __init__.py  extractor.py  filenames.py  filetypes.py  parser.py  submissions.py
src/prompts/: __init__.py  feedback_only.txt  grading_programming.txt  loader.py  templates.py
src/rubrics/: __init__.py  example_essay_rubric.yaml  example_programming_rubric.yaml  loader.py
src/teacher_automation/: __init__.py  cli.py  main.py
src/teacher_automation/config/: __init__.py  activity_loader.py  example_course.yaml  models.py
src/teacher_automation/grading/: feedback.py  generate_feedback.py  grader.py
src/teacher_automation/manual/: manual_review.py
src/teacher_automation/moodle/: __init__.py  api.py  (+1 more)
src/turnitin/: __init__.py  client.py
src/utils/: __init__.py
tests/: __init__.py  test_pipeline_verification.py  test_teacher_automation.py
(+99 files in other folders)
