[project]
name = "teacher-automation"
version = "0.1.0"
description = "An automation toolkit for downloading, processing, grading, and providing feedback for student assignments across multiple courses."
readme = "README.md"
authors = [
  {name = "Marco A. Escobar", email = "marcoaescobar@gmail.com"}
]
maintainers = [
  {name = "Marco A. Escobar", email = "marcoaescobar@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/maescobar132/teacher_automation/issues"
changelog = "https://github.com/maescobar132/teacher_automation/blob/master/changelog.md"
homepage = "https://github.com/maescobar132/teacher_automation"

[project.scripts]
# CLI entry point (to be implemented)
# teacher_automation = "src.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
